[gd_scene load_steps=8 format=2]

[ext_resource path="res://arte/assets/bg.png" type="Texture" id=1]
[ext_resource path="res://Muro.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Transition.tscn" type="PackedScene" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Menu"]
margin_left = 664.0
margin_top = 124.0
margin_right = 1086.0
margin_bottom = 374.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "BRIGES
"
text = "BRIGES
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Menu"]
margin_left = 915.721
margin_top = 366.029
margin_right = 1271.72
margin_bottom = 503.029
custom_fonts/font = SubResource( 2 )
text = "PLAY"
flat = true

[node name="Credits" type="Button" parent="Menu"]
margin_left = 483.115
margin_top = 344.399
margin_right = 839.115
margin_bottom = 481.399
flat = true

[node name="Credits" type="Control" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Credits"]
margin_left = 310.732
margin_top = 693.824
margin_right = 666.732
margin_bottom = 830.824
text = "Back"
flat = true

[node name="TextureRect" type="TextureRect" parent="Credits"]
margin_left = 177.042
margin_top = 121.134
margin_right = 425.042
margin_bottom = 369.134
texture = ExtResource( 5 )

[node name="Tween" type="Tween" parent="."]

[node name="Transition" parent="." instance=ExtResource( 3 )]
selectedLevel = 0
[connection signal="pressed" from="Menu/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_Back_pressed"]
